crates/keron-lang/tests/corpus/errors/check/if_branch_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `if` branches have mismatched types: `then` is `Int`, `else` is `String`
  --> 1:30
  |
1 | val r = if true { 1 } else { "two" }
  |                              ^^^^^
